@@ -1,13 +1,13 @@
-Erik Walthinsen <omega@cse.ogi.edu>
+Erik Walthinsen       <omega@cse.ogi.edu>
 Charles 'Buck' Krasic <krasic@acm.org>
 
 Contributors:
-James Bowman <jamesb@excamera.com>
-Scott F. Johnston <scott@fleetingimage.com>
-Stefan Lucke <Stefan.Lucke@snafu.de>
-Daniel Kobras <kobras@tat.physik.uni-tuebingen.de> 
-Peter Schlaile <udbz@rz.uni-karlsruhe.de>
-Arne Schirmacher <arne@schirmacher.de>
-Thom van Os <thom@vanos.com>
-Andreas Wacker <andreas100@methodstudios.com>
-
+James Bowman          <jamesb@excamera.com>
+Scott F. Johnston     <scott@fleetingimage.com>
+Stefan Lucke          <Stefan.Lucke@snafu.de>
+Daniel Kobras         <kobras@tat.physik.uni-tuebingen.de> 
+Peter Schlaile        <udbz@rz.uni-karlsruhe.de>
+Arne Schirmacher      <arne@schirmacher.de>
+Thom van Os           <thom@vanos.com>
+Andreas Wacker        <andreas100@methodstudios.com>
+Artur Zaprzala        <zybi@users.sourceforge.net>
